# k2_slicer

./: README.md
khi2cpp_hw/: CMakeLists.txt  ExampleJTGoal.txt  package.xml
khi2cpp_hw/src/: khi_krnx_driver.cpp  main.cpp
khi2cpp_hw_description/: CMakeLists.txt
khi2cpp_hw_description/common/: isu_lab.xacro
khi2cpp_hw_description/cx110l/rviz/: view_robot.rviz
khi2cpp_hw_description/cx110l/urdf/: cx110l.urdf.xacro  cx110l_macro.xacro
khi_cx110l_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
khi_cx110l_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  khi_cx110l.ros2_control.xacro  khi_cx110l.srdf  khi_cx110l.urdf.xacro  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
khi_cx110l_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
noether_gateway/: install_dependencies.sh  package.xml  setup.cfg  setup.py
noether_gateway/config/: task_commander.rviz  tool_paths.rviz
noether_gateway/launch/: complete_pipeline.launch.py  noether_task_constructor.launch.py  tool_path_visualization.launch.py
noether_gateway/noether_gateway/: gateway_node.py
noether_gateway/scripts/: gcode_inspector.py  noether_cli.py  noether_task_constructor.py  noether_task_constructor_cli.py  orca_to_noether_enhanced.py  plan_from_gcode.py  pose_array_to_traj.py  tool_path_visualizer.py  visualize_robot_gcode.py
noether_interfaces/: CMakeLists.txt  package.xml
noether_interfaces/msg/: ToolPath.msg  ToolPathPose.msg
noether_interfaces/srv/: PlanSurface.srv
